# igoodmem_langchain

./: .mcp.json
libs/partners/goodmem/: Makefile  README.md  TEST_RESULTS.md  pyproject.toml
libs/partners/goodmem/langchain_goodmem/: __init__.py  _client.py
libs/partners/goodmem/langchain_goodmem/tools/: __init__.py  create_memory.py  create_space.py  delete_memory.py  get_memory.py  list_embedders.py  list_spaces.py  retrieve_memories.py
libs/partners/goodmem/tests/integration_tests/: test_goodmem_integration.py
libs/partners/goodmem/tests/unit_tests/: test_imports.py  test_tools.py
