[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-goodmem"
version = "0.1.0"
description = "An integration package connecting GoodMem and LangChain"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.7.4,<3.0.0",
]

[project.urls]
Repository = "https://github.com/langchain-ai/langchain"

[dependency-groups]
test = [
    "pytest>=7.3.0,<8.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-socket>=0.6.0,<1.0.0",
    "syrupy>=4.0.2,<5.0.0",
    "langchain-core",
    "langchain-tests",
]
test_integration = [
    "httpx>=0.27.0,<1.0.0",
]
lint = ["ruff>=0.13.1,<0.14.0"]
dev = ["langchain-core"]
typing = [
    "mypy>=1.10.0,<2.0.0",
    "langchain-core",
]

[tool.uv.sources]
langchain-core = { path = "../../core", editable = true }
langchain-tests = { path = "../../standard-tests", editable = true }

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "PERF203",
    "SIM105",
    "FIX",
    "TD",
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "ARG001",
    "RUF001",
    "ERA001",
    "PLR0911",
    "FA100",
    "PLR2004",
    "ANN401",
    "ARG002",
    "BLE001",
    "TC",
    "PLC0415",
    "PT011",
    "PT013",
    "TRY",
    "PLW",
    "PLE",
    "FBT",
    "A001",
    "B028",
    "RUF012",
    "B904",
]
unfixable = ["B028"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
disallow_untyped_defs = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S311",
    "SLF001",
    "D",
    "B018",
    "PGH003",
    "PERF401",
    "PT017",
    "RUF012",
    "B017",
]
"scripts/*.py" = [
    "INP001",
]
